Fix for bug#59517: 'Incorrect detection of single row access in ha_ndbcluster::records_in_range()'

The logic for detecting a range being an excact match on a single row has been corrected.

Added a new MTR test 'ndb_statistics' intended for testing statistics returned 
from ha_ndbcluster